Bug 5914 - new evdev driver doesn't detect ps/2 mouse wheel
Summary: new evdev driver doesn't detect ps/2 mouse wheel
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: high normal
Assignee: Zephaniah E. Hull
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-17 02:29 UTC by Islam Amer
Modified: 2006-02-16 17:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Islam Amer 2006-02-17 02:29:15 UTC
I am using latest Xorg-6.9 update RPM for mandriva-2006.

I am trying to setup a multihead which is why I need the new evdev driver with
Dev Phys support.

Therefore have updated my evdev driver to the latest in CVS head.

It now works just fine with USB mice. 

Here is the relevant section of my xorg.conf for this head's USB mouse.

Section "InputDevice"
    Identifier "mouse3"
    Driver "evdev"
    Option "Protocol" "auto"
    Option "Phys" "usb-0000:00:1d.1-2.3/input0"
    Option "CorePointer"
EndSection

and the corresponding log part :

(EE) Keyboard3: name: (null), phys: usb-0000:00:1d.1-2.1/input0, device:
(null).(II) evdev brain: Rescanning devices (1).
(**) Option "CoreKeyboard"
(**) Keyboard3-usb-0000:00:1d.1-2.1/input0: Core Keyboard
(**) Keyboard3-usb-0000:00:1d.1-2.1/input0: XkbRules: "xorg"
(**) Option "XkbModel" "evdev"
(**) Keyboard3-usb-0000:00:1d.1-2.1/input0: XkbModel: "evdev"
(**) Option "XkbLayout" "us"
(**) Keyboard3-usb-0000:00:1d.1-2.1/input0: XkbLayout: "us"
(**) Option "XkbOptions" "compose:rwin"
(**) Keyboard3-usb-0000:00:1d.1-2.1/input0: XkbOptions: "compose:rwin"
(EE) mouse3: name: (null), phys: usb-0000:00:1d.1-2.3/input0, device: (null).
(II) evdev brain: Rescanning devices (2).
(II) evdev brain: Acer Generic USB Hub Keyboard 2 -> Acer Generic USB Hub
Keyboard 1.
(**) Option "CorePointer"
(**) mouse3-usb-0000:00:1d.1-2.3/input0: Core Pointer
(II) mouse3-usb-0000:00:1d.1-2.3/input0: Found 3 relative axes.
(II) mouse3-usb-0000:00:1d.1-2.3/input0: Configuring as pointer.
(**) mouse3-usb-0000:00:1d.1-2.3/input0: WHEELRelativeAxisButtons: 4 5.
(II) mouse3-usb-0000:00:1d.1-2.3/input0: Found 5 mouse buttons
(II) mouse3-usb-0000:00:1d.1-2.3/input0: Configured 7 mouse buttons
(II) XINPUT: Adding extended input device "mouse3-usb-0000:00:1d.1-2.3/input0"
(type: MOUSE)
(II) XINPUT: Adding extended input device
"Keyboard3-usb-0000:00:1d.1-2.1/input0" (type: KEYBOARD)
(II) XINPUT: Adding extended input device "evdev brain" (type: evdev brain)
(II) XINPUT: Adding extended input device "NVIDIA Event Handler" (type: Other)
(II) Keyboard3-usb-0000:00:1d.1-2.1/input0: Init
(EE) evdev_btn.c (95): Registering 7 buttons.
(II) mouse3-usb-0000:00:1d.1-2.3/input0: Init
(II) evdev brain: Rescanning devices (3).
(II) evdev brain: Acer Generic USB Hub Keyboard 3 -> Acer Generic USB Hub
Keyboard 2.
(II) evdev brain: Logitech Optical USB Mouse 3 -> Logitech Optical USB Mouse 2.
(II) Keyboard3-usb-0000:00:1d.1-2.1/input0: On
(II) mouse3-usb-0000:00:1d.1-2.3/input0: On

the USB works perfectly including the wheel.

On the other hand PS/2 mice do work but without the wheel. Is the evdev driver
supposed to be used with PS/2 mice?

Here's the config for the PS/2 mice:

Section "InputDevice"
    Identifier "mouse1"
    Driver "evdev"
    Option "Protocol" "auto"
    Option "Phys" "isa0060/serio1/input0"
EndSection

and here is the corresponding log output.

(EE) Keyboard1: name: (null), phys: isa0060/serio0/input0, device: (null).
(II) evdev brain: Rescanning devices (1).
(**) Option "CoreKeyboard"
(**) Keyboard1-isa0060/serio0/input0: Core Keyboard
(**) Keyboard1-isa0060/serio0/input0: XkbRules: "xorg"
(**) Option "XkbModel" "evdev"
(**) Keyboard1-isa0060/serio0/input0: XkbModel: "evdev"
(**) Option "XkbLayout" "us,ara"
(**) Keyboard1-isa0060/serio0/input0: XkbLayout: "us,ara"
(**) Option "XkbOptions" "compose:rwin"
(**) Keyboard1-isa0060/serio0/input0: XkbOptions: "compose:rwin"
(EE) mouse1: name: (null), phys: isa0060/serio1/input0, device: (null).
(II) evdev brain: Rescanning devices (2).
(II) evdev brain: AT Translated Set 2 keyboard 2 -> AT Translated Set 2 keyboard 1.
(**) Option "CorePointer"
(**) mouse1-isa0060/serio1/input0: Core Pointer
(II) mouse1-isa0060/serio1/input0: Found 3 relative axes.
(II) mouse1-isa0060/serio1/input0: Configuring as pointer.
(**) mouse1-isa0060/serio1/input0: WHEELRelativeAxisButtons: 4 5.
(II) mouse1-isa0060/serio1/input0: Found 3 mouse buttons
(II) mouse1-isa0060/serio1/input0: Configured 3 mouse buttons
(II) XINPUT: Adding extended input device "mouse1-isa0060/serio1/input0" (type:
MOUSE)
(II) XINPUT: Adding extended input device "Keyboard1-isa0060/serio0/input0"
(type: KEYBOARD)
(II) XINPUT: Adding extended input device "evdev brain" (type: evdev brain)
(II) XINPUT: Adding extended input device "NVIDIA Event Handler" (type: Other)
(II) Keyboard1-isa0060/serio0/input0: Init
(EE) evdev_btn.c (95): Registering 3 buttons.
(II) mouse1-isa0060/serio1/input0: Init
(II) evdev brain: Rescanning devices (3).
(II) evdev brain: AT Translated Set 2 keyboard 3 -> AT Translated Set 2 keyboard 2.
(II) evdev brain: ImPS/2 Logitech Wheel Mouse 3 -> ImPS/2 Logitech Wheel Mouse 2.
(II) Keyboard1-isa0060/serio0/input0: On
(II) mouse1-isa0060/serio1/input0: On

As you can see the driver registered 3 buttons only. And the wheel is not
functional.

Please advise.
Comment 1 Islam Amer 2006-02-17 02:32:44 UTC
I forgot to add my /proc/bus/input/devices, as you can see I have 4 mice and 4
keyboards, which makes 4 heads :)

The USB mice work perfectly as I said.

I: Bus=0011 Vendor=0001 Product=0001 Version=ab41
N: Name="AT Translated Set 2 keyboard"
P: Phys=isa0060/serio0/input0
H: Handlers=kbd event0
B: EV=120013
B: KEY=4 2000000 2b803878 f840d001 f2ffffdf ffefffff ffffffff fffffffe
B: MSC=10
B: LED=7

I: Bus=0011 Vendor=0002 Product=0005 Version=0000
N: Name="ImPS/2 Logitech Wheel Mouse"
P: Phys=isa0060/serio1/input0
H: Handlers=mouse0 event1 ts0
B: EV=7
B: KEY=70000 0 0 0 0 0 0 0 0
B: REL=103

I: Bus=0003 Vendor=0566 Product=3002 Version=0001
N: Name="USB 2 Port HUB USB Keyboard"
P: Phys=usb-0000:00:1d.0-2.1/input0
H: Handlers=kbd event2
B: EV=120003
B: KEY=7 ff87207a c14057ff febeffdf ffefffff ffffffff fffffffe
B: LED=1f

I: Bus=0003 Vendor=04a5 Product=700a Version=0001
N: Name="Acer Generic USB Hub Keyboard"
P: Phys=usb-0000:00:1d.1-1.1/input0
H: Handlers=kbd event3
B: EV=120003
B: KEY=7 ff87207a c14057ff febeffdf ffefffff ffffffff fffffffe
B: LED=1f

I: Bus=0003 Vendor=04a5 Product=700a Version=0001
N: Name="Acer Generic USB Hub Keyboard"
P: Phys=usb-0000:00:1d.1-2.1/input0
H: Handlers=kbd event4
B: EV=120003
B: KEY=7 ff87207a c14057ff febeffdf ffefffff ffffffff fffffffe
B: LED=1f

I: Bus=0003 Vendor=046d Product=c016 Version=0340
N: Name="Logitech Optical USB Mouse"
P: Phys=usb-0000:00:1d.0-2.3/input0
H: Handlers=mouse1 event5 ts1
B: EV=7
B: KEY=1f0000 0 0 0 0 0 0 0 0
B: REL=103

I: Bus=0003 Vendor=046d Product=c016 Version=0340
N: Name="Logitech Optical USB Mouse"
P: Phys=usb-0000:00:1d.1-1.3/input0
H: Handlers=mouse2 event6 ts2
B: EV=7
B: KEY=1f0000 0 0 0 0 0 0 0 0
B: REL=103

I: Bus=0003 Vendor=046d Product=c016 Version=0340
N: Name="Logitech Optical USB Mouse"
P: Phys=usb-0000:00:1d.1-2.3/input0
H: Handlers=mouse3 event7 ts3
B: EV=7
B: KEY=1f0000 0 0 0 0 0 0 0 0
B: REL=103

I: Bus=0003 Vendor=0566 Product=3002 Version=0001
N: Name="USB 2 Port HUB USB Keyboard"
P: Phys=usb-0000:00:1d.0-2.1/input1
H: Handlers=kbd event8
B: EV=3
B: KEY=3 0 0 39fa d801d101 1e0000 0 0 0

I: Bus=0003 Vendor=0d8c Product=000c Version=0100
N: Name="C-Media USB Headphone Set  "
P: Phys=usb-0000:00:1d.0-2.2/input3
H: Handlers=kbd event9
B: EV=3
B: KEY=e0000 0 0 0

I: Bus=0003 Vendor=04a5 Product=700a Version=0001
N: Name="Acer Generic USB Hub Keyboard"
P: Phys=usb-0000:00:1d.1-1.1/input1
H: Handlers=kbd event10
B: EV=b
B: KEY=ffffff 0 0 0 c000 120000 0 0 0
B: ABS=1 0

I: Bus=0003 Vendor=0d8c Product=000c Version=0100
N: Name="C-Media USB Headphone Set  "
P: Phys=usb-0000:00:1d.1-1.2/input3
H: Handlers=kbd event11
B: EV=3
B: KEY=e0000 0 0 0

I: Bus=0003 Vendor=04a5 Product=700a Version=0001
N: Name="Acer Generic USB Hub Keyboard"
P: Phys=usb-0000:00:1d.1-2.1/input1
H: Handlers=kbd event12
B: EV=b
B: KEY=ffffff 0 0 0 c000 120000 0 0 0
B: ABS=1 0

I: Bus=0003 Vendor=0d8c Product=000c Version=0100
N: Name="C-Media USB Headphone Set  "
P: Phys=usb-0000:00:1d.1-2.2/input3
H: Handlers=kbd event13
B: EV=3
B: KEY=e0000 0 0 0
Comment 2 Zephaniah E. Hull 2006-02-17 12:21:56 UTC
Doh!

That was a stupid typo.

Fixed in CVS, thanks for reporting it.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.