Bugzilla #5914 <https://bugs.freedesktop.org/show_bug.cgi?id=5914> Stupid     little bug, properly handle wheels on 3 button mice.